--- a/fonts/EBI-Conceptual/ie7/ie7.css
+++ b/fonts/EBI-Conceptual/ie7/ie7.css
@@ -1,27 +1,28 @@
 .icon-chemical {
-	*zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#x62;');
+    *zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#x62;');
 }
-.icon-systems {
-	*zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#x79;');
-}
-.icon-expression {
-	*zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#x67;');
-}
-.icon-proteins {
-	*zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#x50;');
-}
-.icon-crossdomain {
-	*zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#x63;');
-}
-.icon-ontology {
-	*zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#x6f;');
-}
-.icon-literature {
-	*zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#x6c;');
+.icon-cross-domain {
+    *zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#x63;');
 }
 .icon-dna {
-	*zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#x64;');
+    *zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#x64;');
+}
+.icon-expression {
+    *zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#x67;');
+}
+.icon-literature {
+    *zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#x6c;');
+}
+.icon-ontology {
+    *zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#x6f;');
+}
+.icon-proteins {
+    *zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#x50;');
 }
 .icon-structures {
-	*zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#x73;');
+    *zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#x73;');
 }
+.icon-systems {
+    *zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#x79;');
+}
+
