--- a/fonts/EBI-Conceptual/style.css
+++ b/fonts/EBI-Conceptual/style.css
@@ -1,61 +1,63 @@
 @font-face {
-	font-family: 'EBI-Conceptual';
-	src:url('fonts/EBI-Conceptual.eot?i0xjcn');
-	src:url('fonts/EBI-Conceptual.eot?#iefixi0xjcn') format('embedded-opentype'),
-		url('fonts/EBI-Conceptual.woff?i0xjcn') format('woff'),
-		url('fonts/EBI-Conceptual.ttf?i0xjcn') format('truetype'),
-		url('fonts/EBI-Conceptual.svg?i0xjcn#EBI-Conceptual') format('svg');
-	font-weight: normal;
-	font-style: normal;
+    font-family: 'EBI-Conceptual';
+    src:    url('fonts/EBI-Conceptual.eot?umybz4');
+    src:    url('fonts/EBI-Conceptual.eot?umybz4#iefix') format('embedded-opentype'),
+        url('fonts/EBI-Conceptual.ttf?umybz4') format('truetype'),
+        url('fonts/EBI-Conceptual.woff?umybz4') format('woff'),
+        url('fonts/EBI-Conceptual.svg?umybz4#EBI-Conceptual') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 [class^="icon-"], [class*=" icon-"] {
-	font-family: 'EBI-Conceptual';
-	speak: none;
-	font-style: normal;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	line-height: 1;
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'EBI-Conceptual' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    
+    /* Enable Ligatures ================ */
+    letter-spacing: 0;
+    -webkit-font-feature-settings: "liga";
+    -moz-font-feature-settings: "liga=1";
+    -moz-font-feature-settings: "liga";
+    -ms-font-feature-settings: "liga" 1;
+    -o-font-feature-settings: "liga";
+    font-feature-settings: "liga";
 
-	/* Better Font Rendering =========== */
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .icon-chemical:before {
-	content: "\62";
+    content: "\62";
 }
-
-.icon-systems:before {
-	content: "\79";
+.icon-cross-domain:before {
+    content: "\63";
 }
-
-.icon-expression:before {
-	content: "\67";
-}
-
-.icon-proteins:before {
-	content: "\50";
-}
-
-.icon-crossdomain:before {
-	content: "\63";
-}
-
-.icon-ontology:before {
-	content: "\6f";
-}
-
-.icon-literature:before {
-	content: "\6c";
-}
-
 .icon-dna:before {
-	content: "\64";
+    content: "\64";
 }
-
+.icon-expression:before {
+    content: "\67";
+}
+.icon-literature:before {
+    content: "\6c";
+}
+.icon-ontology:before {
+    content: "\6f";
+}
+.icon-proteins:before {
+    content: "\50";
+}
 .icon-structures:before {
-	content: "\73";
+    content: "\73";
+}
+.icon-systems:before {
+    content: "\79";
 }
 
