--- a/fonts/EBI-SocialMedia/style.css
+++ b/fonts/EBI-SocialMedia/style.css
@@ -1,82 +1,93 @@
 @font-face {
-	font-family: 'EBI-SocialMedia';
-	src:url('fonts/EBI-SocialMedia.eot?fqr6em');
-	src:url('fonts/EBI-SocialMedia.eot?#iefixfqr6em') format('embedded-opentype'),
-		url('fonts/EBI-SocialMedia.ttf?fqr6em') format('truetype'),
-		url('fonts/EBI-SocialMedia.woff?fqr6em') format('woff'),
-		url('fonts/EBI-SocialMedia.svg?fqr6em#EBI-SocialMedia') format('svg');
-	font-weight: normal;
-	font-style: normal;
+    font-family: 'EBI-SocialMedia';
+    src:    url('fonts/EBI-SocialMedia.eot?9sw6ob');
+    src:    url('fonts/EBI-SocialMedia.eot?9sw6ob#iefix') format('embedded-opentype'),
+        url('fonts/EBI-SocialMedia.ttf?9sw6ob') format('truetype'),
+        url('fonts/EBI-SocialMedia.woff?9sw6ob') format('woff'),
+        url('fonts/EBI-SocialMedia.svg?9sw6ob#EBI-SocialMedia') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 [class^="icon-"], [class*=" icon-"] {
-	font-family: 'EBI-SocialMedia';
-	speak: none;
-	font-style: normal;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	line-height: 1;
-	
-	/* Enable Ligatures ================ */
-	letter-spacing: 0;
-	-webkit-font-feature-settings: "liga";
-	-moz-font-feature-settings: "liga=1";
-	-moz-font-feature-settings: "liga";
-	-ms-font-feature-settings: "liga" 1;
-	-o-font-feature-settings: "liga";
-	font-feature-settings: "liga";
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'EBI-SocialMedia' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    
+    /* Enable Ligatures ================ */
+    letter-spacing: 0;
+    -webkit-font-feature-settings: "liga";
+    -moz-font-feature-settings: "liga=1";
+    -moz-font-feature-settings: "liga";
+    -ms-font-feature-settings: "liga" 1;
+    -o-font-feature-settings: "liga";
+    font-feature-settings: "liga";
 
-	/* Better Font Rendering =========== */
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-windows:before {
-	content: "\77";
-}
-.icon-orcid:before {
-	content: "\4f";
+.icon-android:before {
+    content: "\61";
 }
 .icon-apple:before {
-	content: "\41";
-}
-.icon-linux:before {
-	content: "\58";
-}
-.icon-flickr:before {
-	content: "\66";
-}
-.icon-slideshare:before {
-	content: "\53";
-}
-.icon-wordpress:before {
-	content: "\50";
+    content: "\41";
 }
 .icon-blogger:before {
-	content: "\42";
+    content: "\42";
 }
 .icon-facebook:before {
-	content: "\46";
+    content: "\46";
+}
+.icon-flickr:before {
+    content: "\66";
+}
+.icon-github:before {
+    content: "\67";
 }
 .icon-googleplus:before {
-	content: "\47";
+    content: "\47";
 }
 .icon-linkedin:before {
-	content: "\4c";
+    content: "\4c";
+}
+.icon-linux:before {
+    content: "\58";
+}
+.icon-orcid:before {
+    content: "\4f";
 }
 .icon-rss:before {
-	content: "\52";
+    content: "\52";
+}
+.icon-skype:before {
+    content: "\73";
+}
+.icon-slideshare:before {
+    content: "\53";
 }
 .icon-twitter:before {
-	content: "\54";
+    content: "\54";
 }
 .icon-vimeo:before {
-	content: "\56";
+    content: "\56";
 }
 .icon-weibo:before {
-	content: "\57";
+    content: "\57";
+}
+.icon-windows:before {
+    content: "\77";
+}
+.icon-wordpress:before {
+    content: "\50";
 }
 .icon-youtube:before {
-	content: "\59";
+    content: "\59";
 }
+
