Adds list specs, icon lists

--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -262,6 +262,38 @@ a:active {
     border-color: #fff transparent transparent;
   }
 
+  /* List ...... leaders */
+  ul.leaders {
+    max-width: 40em;
+    padding: 0;
+    overflow-x: hidden;
+    list-style: none}
+  ul.leaders li:before {
+    float: left;
+    width: 0;
+    white-space: nowrap;
+    content:
+       ". . . . . . . . . . . . . . . . . . . . "
+       ". . . . . . . . . . . . . . . . . . . . "
+       ". . . . . . . . . . . . . . . . . . . . "
+       ". . . . . . . . . . . . . . . . . . . . ";
+  }
+  ul.leaders span:first-child {
+    padding-right: 0.33em;
+    background: white;
+  }
+  ul.leaders span + span {
+    float: right;
+    padding-left: 0.33em;
+    background: white;
+  }
+
+  /* List: icon bullets */
+  li.icon-bullet { list-style-type: none; text-indent: -1.3em; }
+
+
+
+
   /* extend Froundation utility selectors/classes */
   .small { font-size: 80%; line-height: inherit; }
   .code {
