--- a/css/ebi-training-colours.css
+++ b/css/ebi-training-colours.css
@@ -102,7 +102,7 @@ h1, h2, h3, h4, h5, h6 { color: #222222; }
 
 h2 {color: #fab700;}
 
-h3 { color: #2E3482; }
+h3 { color: #444; }
 
 h1 a:link,
 h2 a:link,
