Adds test implementation of menu triangle indicators

--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -161,6 +161,29 @@ a:active {
     color: #fff;
   }
 
+  /* Menu triangles */
+  #local-masthead nav ul#global-nav.menu li a:hover:after, 
+  #local-masthead nav ul.dropdown.menu.float-left li a:hover:after { 
+    position: relative;
+    content: '';
+    width: 0;
+    display: block;
+    left: 50%;
+    top: 2px;
+    height: 0;
+    bottom: 0;
+    margin: 0 -18px -9px -9px;
+    border-left: 9px solid transparent;
+    border-right: 9px solid transparent;
+    border-bottom: 9px solid #70BDBD;
+    -moz-transform: scale(0.999);
+    -webkit-backface-visibility: hidden;
+  }
+
+  #local-masthead nav ul.dropdown.menu.float-left li a:hover:after { 
+    border-bottom-color: #fff;
+  }
+
   /* Local masthead secondary links on mobile */
   @media screen and (max-width: 40em) {
     #local-masthead ul.menu.dropdown.float-right {
