--- a/css/ebi-global-drupal.css
+++ b/css/ebi-global-drupal.css
@@ -27,11 +27,11 @@ body .form-actions.form-wrapper button {
 /* Misc */
 .label { background: none; }
 html.js fieldset.collapsed { height: 2em; }
-.button.primary { background-color: #fab700; }
+.button.primary { background-color: rgb(233,180,0); }
 
 /* Edit form */
 .node-form input#edit-title { 
-  color: #fab700; 
+  color: rgb(233,180,0); 
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif; 
   font-size: 1.8em; 
   height: 2em;
